--- a/install/generator/06-syndesis-prometheus.yml.mustache
+++ b/install/generator/06-syndesis-prometheus.yml.mustache
@@ -49,8 +49,7 @@
             regex: tsdb_(.+)
             action: drop
 
-        - job_name: integration-pods
-
+        - job_name: syndesis-db
           kubernetes_sd_configs:
           - role: pod
             namespaces:
@@ -61,6 +60,9 @@
           - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
             action: keep
             regex: true
+          - source_labels: [__meta_kubernetes_pod_label_syndesis_io_component]
+            action: keep
+            regex: syndesis-db-metrics
           - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
             action: replace
             target_label: __metrics_path__
@@ -81,6 +83,48 @@
             action: replace
             target_label: kubernetes_pod_name
 
+          metric_relabel_configs:
+          - source_labels: [__name__]
+            regex: go_(.+)
+            action: drop
+          - source_labels: [datname]
+            regex: (postgres|grafana|template.*)
+            action: drop
+
+        - job_name: integration-pods
+
+          kubernetes_sd_configs:
+          - role: pod
+            namespaces:
+              names:
+                - ${OPENSHIFT_PROJECT}
+
+          relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
+            action: keep
+            regex: true
+          - source_labels: [__meta_kubernetes_pod_label_syndesis_io_type]
+            action: keep
+            regex: integration
+          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
+            action: replace
+            target_label: __metrics_path__
+            regex: (.+)
+          - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+            action: replace
+            regex: ([^:]+)(?::\d+)?;(\d+)
+            replacement: $1:$2
+            target_label: __address__
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+)
+          - action: labelmap
+            regex: __meta_kubernetes_pod_annotation_(syndesis.+)
+          - source_labels: [__meta_kubernetes_namespace]
+            action: replace
+            target_label: kubernetes_namespace
+          - source_labels: [__meta_kubernetes_pod_name]
+            action: replace
+            target_label: kubernetes_pod_name
           metric_relabel_configs:
           - source_labels: [__name__]
             regex: jmx_(.+)
