chore: update productized app name; fixes #4284

--- a/install/generator/03-syndesis-ui.yml.mustache
+++ b/install/generator/03-syndesis-ui.yml.mustache
@@ -131,7 +131,7 @@
           "logoDarkBg": "",
           "iconWhiteBg": "assets/images/FuseOnlineLogo_Black.svg",
           "iconDarkBg": "assets/images/FuseOnlineLogo_White.svg",
-          "appName": "Ignite",
+          "appName": "Fuse Online",
           "favicon32": "/favicon-32x32.png",
           "favicon16": "/favicon-16x16.png",
           "touchIcon": "/apple-touch-icon.png",
