--- a/app/ui/src/scss/utils/_overrides.scss
+++ b/app/ui/src/scss/utils/_overrides.scss
@@ -15,33 +15,79 @@ body.cards-pf {
   margin-bottom: 10px;
 }
 
-.layout-pf.layout-pf-fixed .container-pf-nav-pf-vertical.collapsed-nav {
+// .layout-pf.layout-pf-fixed .container-pf-nav-pf-vertical.collapsed-nav {
+//   margin-left: 0;
+// }
+
+// .pf-c-page__header {
+//   position: fixed;
+//   display: block;
+//   width: 100%;
+//   z-index: 300;
+// }
+
+// .pf-c-page__header-brand {
+//   background-color: #363636;
+// }
+
+.pf-c-page {
+  display: block;
+  grid-template-columns: none;
+  grid-template-rows: none;
+  grid-template-areas: none;
+}
+
+.pf-c-page__header {
+  grid-area: none;
+}
+
+.pf-c-page__header-tools {
+  z-index: 111;
+}
+
+// .pf-c-page__header-tools {
+//   // background-color: #363636;
+//   // position: fixed;
+//   left: 0;
+//   right: 0;
+//   top: 0;
+// }
+
+// .navbar {
+//   a {
+//     color: #ffffff;
+//   }
+
+//   .navbar-brand {
+//     margin: 6px 0 0 25px;
+//     white-space: nowrap;
+//     #appLogo {
+//       width: 39%;
+//       height: auto;
+//     }
+//     .navbar-brand-icon {
+//       max-height: 28px;
+//       vertical-align: middle;
+//     }
+//     .navbar-brand-name {
+//       max-height: 28px;
+//       font-size: 20px;
+//       display: inline-block;
+//       vertical-align: middle;
+//     }
+//   }
+// }
+
+#appLogo {
+  width: 100%;
+}
+
+.pf-c-page__main.collapsed-nav {
   margin-left: 0;
 }
 
-.navbar {
-  a {
-    color: #ffffff;
-  }
-
-  .navbar-brand {
-    margin: 6px 0 0 25px;
-    white-space: nowrap;
-    #appLogo {
-      width: 39%;
-      height: auto;
-    }
-    .navbar-brand-icon {
-      max-height: 28px;
-      vertical-align: middle;
-    }
-    .navbar-brand-name {
-      max-height: 28px;
-      font-size: 20px;
-      display: inline-block;
-      vertical-align: middle;
-    }
-  }
+.pf-c-page__main {
+  margin-left: 290px;
 }
 
 /// Patternfly Tabbed Nav overrides (which also override ngx-bootstrap's tab style)
