--- a/install/generator/07-syndesis-grafana.yml.mustache
+++ b/install/generator/07-syndesis-grafana.yml.mustache
@@ -324,282 +324,10 @@
           editable: true
           options:
             path: /etc/grafana/provisioning/dashboards
-    syndesis-app-integration-dashboard.json: |
-        {
-            "annotations": {
-                "list": [
-                {
-                    "builtIn": 1,
-                    "datasource": "-- Grafana --",
-                    "enable": true,
-                    "hide": true,
-                    "iconColor": "rgba(0, 211, 255, 1)",
-                    "name": "Annotations & Alerts",
-                    "type": "dashboard"
-                }
-                ]
-            },
-            "editable": true,
-            "gnetId": null,
-            "graphTooltip": 0,
-            "id": 1,
-            "links": [],
-            "panels": [
-                {
-                "cacheTimeout": null,
-                "colorBackground": false,
-                "colorValue": false,
-                "colors": [
-                    "#299c46",
-                    "rgba(237, 129, 40, 0.89)",
-                    "#d44a3a"
-                ],
-                "format": "none",
-                "gauge": {
-                    "maxValue": 100,
-                    "minValue": 0,
-                    "show": false,
-                    "thresholdLabels": false,
-                    "thresholdMarkers": true
-                },
-                "gridPos": {
-                    "h": 9,
-                    "w": 12,
-                    "x": 0,
-                    "y": 0
-                },
-                "id": 2,
-                "interval": null,
-                "links": [],
-                "mappingType": 1,
-                "mappingTypes": [
-                    {
-                    "name": "value to text",
-                    "value": 1
-                    },
-                    {
-                    "name": "range to text",
-                    "value": 2
-                    }
-                ],
-                "maxDataPoints": 100,
-                "nullPointMode": "connected",
-                "nullText": null,
-                "postfix": "",
-                "postfixFontSize": "50%",
-                "prefix": "",
-                "prefixFontSize": "50%",
-                "rangeMaps": [
-                    {
-                    "from": "null",
-                    "text": "N/A",
-                    "to": "null"
-                    }
-                ],
-                "sparkline": {
-                    "fillColor": "rgba(31, 118, 189, 0.18)",
-                    "full": false,
-                    "lineColor": "rgb(31, 120, 193)",
-                    "show": false
-                },
-                "tableColumn": "",
-                "targets": [
-                    {
-                    "refId": "A"
-                    }
-                ],
-                "thresholds": "",
-                "title": "Testing",
-                "type": "singlestat",
-                "valueFontSize": "80%",
-                "valueMaps": [
-                    {
-                    "op": "=",
-                    "text": "N/A",
-                    "value": "null"
-                    }
-                ],
-                "valueName": "avg"
-                }
-            ],
-            "schemaVersion": 16,
-            "style": "dark",
-            "tags": [],
-            "templating": {
-                "list": []
-            },
-            "time": {
-                "from": "now-6h",
-                "to": "now"
-            },
-            "timepicker": {
-                "refresh_intervals": [
-                "5s",
-                "10s",
-                "30s",
-                "1m",
-                "5m",
-                "15m",
-                "30m",
-                "1h",
-                "2h",
-                "1d"
-                ],
-                "time_options": [
-                "5m",
-                "15m",
-                "1h",
-                "6h",
-                "12h",
-                "24h",
-                "2d",
-                "7d",
-                "30d"
-                ]
-            },
-            "timezone": "",
-            "title": "Syndesis Application Dashboard",
-            "uid": "7dVsGzQik",
-            "version": 1
-        }
-    syndesis-infrastructure-dashboard.json: |
-        {
-            "annotations": {
-                "list": [
-                {
-                    "builtIn": 1,
-                    "datasource": "-- Grafana --",
-                    "enable": true,
-                    "hide": true,
-                    "iconColor": "rgba(0, 211, 255, 1)",
-                    "name": "Annotations & Alerts",
-                    "type": "dashboard"
-                }
-                ]
-            },
-            "editable": true,
-            "gnetId": null,
-            "graphTooltip": 0,
-            "id": 2,
-            "links": [],
-            "panels": [
-                {
-                "cacheTimeout": null,
-                "colorBackground": false,
-                "colorValue": false,
-                "colors": [
-                    "#299c46",
-                    "rgba(237, 129, 40, 0.89)",
-                    "#d44a3a"
-                ],
-                "format": "none",
-                "gauge": {
-                    "maxValue": 100,
-                    "minValue": 0,
-                    "show": false,
-                    "thresholdLabels": false,
-                    "thresholdMarkers": true
-                },
-                "gridPos": {
-                    "h": 9,
-                    "w": 12,
-                    "x": 0,
-                    "y": 0
-                },
-                "id": 2,
-                "interval": null,
-                "links": [],
-                "mappingType": 1,
-                "mappingTypes": [
-                    {
-                    "name": "value to text",
-                    "value": 1
-                    },
-                    {
-                    "name": "range to text",
-                    "value": 2
-                    }
-                ],
-                "maxDataPoints": 100,
-                "nullPointMode": "connected",
-                "nullText": null,
-                "postfix": "",
-                "postfixFontSize": "50%",
-                "prefix": "",
-                "prefixFontSize": "50%",
-                "rangeMaps": [
-                    {
-                    "from": "null",
-                    "text": "N/A",
-                    "to": "null"
-                    }
-                ],
-                "sparkline": {
-                    "fillColor": "rgba(31, 118, 189, 0.18)",
-                    "full": false,
-                    "lineColor": "rgb(31, 120, 193)",
-                    "show": false
-                },
-                "tableColumn": "",
-                "targets": [
-                    {
-                    "refId": "A"
-                    }
-                ],
-                "thresholds": "",
-                "title": "Testing",
-                "type": "singlestat",
-                "valueFontSize": "80%",
-                "valueMaps": [
-                    {
-                    "op": "=",
-                    "text": "N/A",
-                    "value": "null"
-                    }
-                ],
-                "valueName": "avg"
-                }
-            ],
-            "schemaVersion": 16,
-            "style": "dark",
-            "tags": [],
-            "templating": {
-                "list": []
-            },
-            "time": {
-                "from": "now-6h",
-                "to": "now"
-            },
-            "timepicker": {
-                "refresh_intervals": [
-                "5s",
-                "10s",
-                "30s",
-                "1m",
-                "5m",
-                "15m",
-                "30m",
-                "1h",
-                "2h",
-                "1d"
-                ],
-                "time_options": [
-                "5m",
-                "15m",
-                "1h",
-                "6h",
-                "12h",
-                "24h",
-                "2d",
-                "7d",
-                "30d"
-                ]
-            },
-            "timezone": "",
-            "title": "Syndesis Infrastructure Dashboard",
-            "uid": "8eWtHaRjl",
-            "version": 1
-        }
+{{#Dashboards}}
+    {{FileName}}: |
+{{{Json}}}
+{{/Dashboards}}
 - apiVersion: v1
   kind: Service
   metadata:
