--- a/app/integration/project-generator/src/main/resources/io/syndesis/integration/project/generator/templates/pom.xml.mustache
+++ b/app/integration/project-generator/src/main/resources/io/syndesis/integration/project/generator/templates/pom.xml.mustache
@@ -108,6 +108,11 @@
       <artifactId>integration-runtime</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.syndesis.integration</groupId>
+      <artifactId>integration-runtime-springboot</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
