chore(ui): add button to edit API definition on...
... operations list page

--- a/app/ui/src/app/integration/api-provider/operations-page/integration-api-provider-operations-page.component.html
+++ b/app/ui/src/app/integration/api-provider/operations-page/integration-api-provider-operations-page.component.html
@@ -39,6 +39,9 @@
                 </ol>
               </div>
               <div class="toolbar-pf-action-right">
+                <button type="button" class="btn btn-default">
+                    <i class="fa fa-pencil" aria-hidden="true" title="Edit API Definition"></i> Edit API Definition
+                </button>
               </div>
             </div>
           </div>
