--- a/app/ui/src/app/integration/api-provider/operations-page/integration-api-provider-operations-page.component.html
+++ b/app/ui/src/app/integration/api-provider/operations-page/integration-api-provider-operations-page.component.html
@@ -39,7 +39,7 @@
                 </ol>
               </div>
               <div class="toolbar-pf-action-right">
-                <button type="button" class="btn btn-default">
+                <button type="button" class="btn btn-default" [routerLink]="['../specification']">
                     <i class="fa fa-pencil" aria-hidden="true" title="Edit API Definition"></i> Edit API Definition
                 </button>
               </div>
